Added image  in banner and button

--- a/index.html
+++ b/index.html
@@ -28,8 +28,22 @@
 
             </div>
                         <div class="banner-body">
+                            <center>
+                            <h1>WELCOME</h1>
+                            <p>Hypertext Markup Language ,
+                                a standardised system for tagging text files to achieve font,color,graphic
+                                and<br> hyperlink effects on WWW pages
+                            </p>
+                            <a class="btn">ABOUT ME</a>
+                            </center>
 
                 </div>
+                </div>
+                <div class="container">
+
+                </div>
+                <div class="footer">
+                    
                 </div>
  </body>
 
